# RRG

./: .gitignore  CH4chemMod.F90  CH4chem_mod.F90  CMakeLists.txt  CO2chemMod.F90  CO2chem_mod.F90  CO_mod.F90  COchemMod.F90  COchem_mod.F90  DEVEL.org  EXPORTS.h  GEOScarbon_GridComp.rc  GEOScarbon_GridCompMod.F90  GEOScarbon_GridComp_ExtData.rc  IMPORTS.h  RRGMod.F90  RRG_GridCompMod.F90  _memutils.F90  build  diagnosticsMod.F90  diagnostics_mod.F90  geos_SimplePhotolysisMod.F90  globalMod.F90  global_mod.F90  integrationMod.F90  integration_mod.F90  posDef.surfaceMod.F90  posDev.surfaceMod.F90  simplebox  simplebox.F90  std.surfaceMod.F90  surfaceMod.F90  surfaceMod.F90X  surface_mod.F90  typesMod.F90  types_mod.F90  utilsMod.F90  utils_mod.F90
RC/: CMakeLists.txt  GEOScarbon_GridComp.rc  GEOScarbon_GridComp_ExtData.rc  RRG_GridComp.rc  RRG_GridComp_ExtData.rc  RRG_GridComp_ExtData.yaml
